Nested views added

--- a/src/components/domng_localResources.component
+++ b/src/components/domng_localResources.component
@@ -12,4 +12,8 @@
     <script type="text/javascript" src="https://localhost:8000/resources/app/app.js"/>
     <script type="text/javascript" src="https://localhost:8000/resources/app/app.controller.js"/>
 
+    <!-- home module -->
+    <script type="text/javascript" src="https://localhost:8000/resources/app/modules/home/home.module.js"/>
+    <script type="text/javascript" src="https://localhost:8000/resources/app/modules/home/controller/home.controller.js"/>
+
 </apex:component>
