--- a/src/pages/domng_base.page
+++ b/src/pages/domng_base.page
@@ -30,9 +30,10 @@ docType="html-5.0"
     <div>Hello</div>
 
     <div ng-app="domng" class="ui-view-container">
-        <div class="ui-view" id="master-ui-view">Main content {{1 + 2}}</div>
-        <a href="#/home">clickme</a>
+        <div class="ui-view" id="master-ui-view"></div>
+        <a href="#/app/home">clickme</a>
         <div>why is this still here?</div>
+        <div>Main content {{1 + 2}}</div>
     </div>
 
 </apex:page>
